2010-09-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/byte-run.el (set-advertised-calling-convention):
	Add `when' argument.  Update callers.

	* subr.el (unintern): Declare the obarray arg mandatory.

2010-09-14  Glenn Morris  <rgm@gnu.org>

	* calendar/diary-lib.el (diary-list-entries-hook, diary-sort-entries):
	Doc fixes.

	* calendar/diary-lib.el (diary-included-files): New variable.
	(diary-list-entries): Maybe initialize diary-included-files.
	(diary-include-other-diary-files): Append to diary-included-files.
	* calendar/appt.el (appt-update-list): Also check the members of
	diary-included-files.  (Bug#6999)
	(appt-check): Doc fix.

2010-09-12  David Reitter  <david.reitter@gmail.com>

	* simple.el (line-move-visual): Do not truncate goal column to
	integer size.  (Bug#7020)

2010-09-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* repeat.el (repeat): Allow repeating when the last event is a click.
	Suggested by Drew Adams (bug#6256).

2010-09-11  Sascha Wilde  <wilde@sha-bang.de>

	* vc/vc-hg.el (vc-hg-state,vc-hg-working-revision):
	Replace setting HGRCPATH to "" by some less invasive --config options.

2010-09-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* font-lock.el (font-lock-beginning-of-syntax-function):
	Mark as obsolete.

2010-09-10  Glenn Morris  <rgm@gnu.org>

	* menu-bar.el (menu-bar-options-save): Fix handling of menu-bar
	and tool-bar modes.  (Bug#6211)
	(menu-bar-mode): Move setting of standard-value after the
	minor-mode definition, otherwise it seems to have no effect.

2010-09-08  Masatake YAMATO  <yamato@redhat.com>

	* progmodes/antlr-mode.el (antlr-font-lock-additional-keywords):
	Fix typo.  (Bug#6976)

2010-09-06  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* whitespace.el: Allow cleaning up blanks without blank
	visualization (Bug#6651).  Adjust help window for
	whitespace-toggle-options (Bug#6479).  Allow to use fill-column
	instead of whitespace-line-column (from EmacsWiki).  New version 13.1.